[tool.poetry]
name = "taxi-demand-predictor-nyc"
version = "0.1.0"
description = "\"\""
authors = ["Sameer Ahmad <samimughal7786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
tqdm = "^4.66.2"
plotly = "^5.18.0"
pyarrow = "^15.0.0"
nbformat = "^5.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
